--- a/kit/src/main/res/values/ids.xml
+++ b/kit/src/main/res/values/ids.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item type="id" name="srl_tag"/>
+
+
+    <item type="id" name="rc_sight_record_bottom"/>
+
 </resources>
