修改已读样式

--- a/kit/src/main/res/layout/rc_message_item.xml
+++ b/kit/src/main/res/layout/rc_message_item.xml
@@ -98,14 +98,15 @@
                 android:src="@drawable/rc_ic_warning"
                 android:visibility="gone" />
 
-            <ImageView
+            <TextView
                 android:id="@+id/rc_read_receipt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="已读"
+                android:textSize="12sp"
                 android:layout_gravity="bottom"
                 android:layout_marginEnd="4dp"
-                android:src="@drawable/rc_read_receipt"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/rc_read_receipt_request"
