--- a/kit/src/main/res/layout/rc_message_item.xml
+++ b/kit/src/main/res/layout/rc_message_item.xml
@@ -102,10 +102,10 @@
                 android:id="@+id/rc_read_receipt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="已读"
-                android:textSize="12sp"
                 android:layout_gravity="bottom"
                 android:layout_marginEnd="4dp"
+                android:text="已读"
+                android:textSize="12sp"
                 android:visibility="visible" />
 
             <TextView
@@ -140,6 +140,15 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_sendtime"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/rc_margin_size_10"
+        app:layout_constraintLeft_toLeftOf="@id/ll_content"
+        app:layout_constraintRight_toRightOf="@id/ll_content"
+        app:layout_constraintTop_toBottomOf="@id/ll_content" />
 
     <View
         android:id="@+id/rc_v_edit"
