--- a/kit/src/main/res/layout/rc_message_item.xml
+++ b/kit/src/main/res/layout/rc_message_item.xml
@@ -145,7 +145,9 @@
         android:id="@+id/tv_sendtime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/rc_margin_size_10"
+        android:layout_marginTop="5dp"
+        android:textSize="@dimen/rc_margin_size_12"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="@id/ll_content"
         app:layout_constraintRight_toRightOf="@id/ll_content"
         app:layout_constraintTop_toBottomOf="@id/ll_content" />
