--- a/kit/src/main/res/layout/rc_message_item.xml
+++ b/kit/src/main/res/layout/rc_message_item.xml
@@ -146,7 +146,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:textSize="@dimen/rc_margin_size_12"
+        android:textSize="12sp"
         android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="@id/ll_content"
         app:layout_constraintRight_toRightOf="@id/ll_content"
